--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "./app.js",
-            "use": "@vercel/node"
+            "src": "app.js",
+            "use": "@now/node"
         }
     ],
     "routes": [
         {
-            "src": "/((?!general).*)",
-            "dest": "/"
+            "src": "/(.*)",
+            "dest": "app.js"
         }
     ]
 }
